# dockserver

./: .gitignore  Cargo.toml  deploy.sh  dockerfile  license  readme.md  shell.nix
src/: main.rs  update_job.rs  utils.rs
src/docker_api/: docker_api.rs  meta_data.rs  mod.rs  utils.rs
src/notifications/: mod.rs  notifier.rs  stdout_notifier.rs  telegram_notifier.rs
