[package]
name = "dockserver"
version = "0.1.4-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
telegram_notifier = ["ureq"]

[dependencies]
ctrlc = "3.2"
chrono = "0.4"
cron = "0.11"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
tokio-stream = "0.1"
shiplift = { version = "0.7", default-features = false, features = ["unix-socket"] }
ureq = { version = "2.5", optional = true }

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"
